[package]
name = "geohashrs"
version = "0.1.3"
authors = ["nabil@eml.cc"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "geohashrs"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
maintainer = "Nabil Servais"
maintainer-email = "nabil@eml.cc"
requires-python = ">=3.6"
project-url = "https://github.com/blackrez/geohashrs"
classifier = ["Programming Language :: Python"]

[dependencies]
geohash = "0.9.0"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]
